tests/hopix/hopix/typechecker/good/external.hopix
extern p : int * int -> int

val x : int = p (0, 1)