tests/hopix/hopix/typechecker/bad/litpatterns3.hopix
val x : int = 'a' ? { 'b' => 0 | 'c' => 1 | (_ : int) => 2 }